content/en/docs/scaling/svc-example-app.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: example-web-app
  name: example-web-app
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: example-web-app
  type: ClusterIP
