content/en/docs/scaling/ingress-mobi.template.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-web-app
spec:
  rules:
    - host: example-web-app-<namespace>.<appdomain>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: 
                name: example-web-app
                port: 
                  number: 5000
